# quadruped-walkgen

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .mergify.yml  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  package.xml
benchmark/: CMakeLists.txt  quadruped-non-linear.cpp  quadruped-planner-cg.cpp  quadruped-planner-period.cpp  quadruped-planner.cpp  quadruped.cpp  quadruped.py
bindings/: CMakeLists.txt
bindings/python/mpc_controller/: mpc_controller.cpp
build_/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  config.h  install_manifest.txt  quadruped-walkgen.pc
build_/benchmark/: CTestTestfile.cmake  Makefile  cmake_install.cmake  quadruped  quadruped-non-linear  quadruped-planner  quadruped-planner-cg
build_/cmake/: cmake_reinstall.cmake.configured  cmake_uninstall.cmake
build_/cmake/RELEASE/: cmake_reinstall.cmake
build_/doc/: Doxyfile  quadruped-walkgen.doxytag
build_/doc/doxygen-html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_b9e4337fd26439d9ffac97c954fdb405.html  dir_b9e4337fd26439d9ffac97c954fdb405.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  graph_legend.html  index.html  menudata.js  namespacequadruped__walkgen.html  namespaces.html  namespaces.js  navtreedata.js  navtreeindex0.js  quadruped_8cpp.html  quadruped_8cpp__incl.map  quadruped_8cpp__incl.md5  quadruped_8hxx.html  quadruped_8hxx__incl.map  quadruped_8hxx__incl.md5  quadruped_8hxx_source.html  quadruped__augmented_01_07copy_08_8hxx.html  quadruped__augmented_01_07copy_08_8hxx__incl.map  quadruped__augmented_01_07copy_08_8hxx__incl.md5  quadruped__augmented_01_07copy_08_8hxx_source.html  quadruped__augmented_8cpp.html  quadruped__augmented_8cpp__incl.map  quadruped__augmented_8cpp__incl.md5  quadruped__augmented_8hxx.html  quadruped__augmented_8hxx__incl.map  quadruped__augmented_8hxx__incl.md5  quadruped__augmented_8hxx_source.html  quadruped__augmented__time_8cpp.html  quadruped__augmented__time_8cpp__incl.map  quadruped__augmented__time_8cpp__incl.md5  quadruped__augmented__time_8hxx.html  quadruped__augmented__time_8hxx__incl.map  quadruped__augmented__time_8hxx__incl.md5  quadruped__augmented__time_8hxx_source.html  (+32 more)
build_/doc/doxygen-html/search/: all_0.js  files_0.js  namespaces_0.js  searchdata.js
build_/include/quadruped-walkgen/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_/include/quadruped/walkgen/: config.hh  deprecated.hh  warning.hh
build_/python/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_/python/quadruped_walkgen/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
doc/: README.md  README.txt
exemple/: GaitProblem.py  exemple_simple.py
include/mpc_controller/: CMakeLists.txt  macros.hpp
include/quadruped-walkgen/: CMakeLists.txt  gait_problem.hpp  quadruped.hpp  quadruped.hxx  quadruped_augmented.hpp  quadruped_augmented.hxx  quadruped_augmented_time.hpp  quadruped_augmented_time.hxx  quadruped_nl.hpp  quadruped_nl.hxx  quadruped_step.hpp  quadruped_step.hxx  quadruped_step_period.hpp  quadruped_step_period.hxx  quadruped_step_time.hpp  quadruped_step_time.hxx  quadruped_time.hpp  quadruped_time.hxx
python/: CMakeLists.txt
python/mpc_controller/: __init__.py
python/quadruped_walkgen/: CMakeLists.txt  __init__.py  action-base.cpp  action-base.hpp  core.cpp  core.hpp  crocoddyl.cpp  fwd.hpp  gait_problem.cpp  mpc_controller.cpp  quadruped.cpp  quadruped_augmented.cpp  quadruped_augmented_time.cpp  quadruped_nl.cpp  quadruped_step.cpp  quadruped_step_period.cpp  quadruped_step_time.cpp  quadruped_time.cpp  vector-converter.hpp
src/: CMakeLists.txt  gait_problem.cpp  main.cpp  quadruped.cpp  quadruped_augmented.cpp  quadruped_augmented_time.cpp  quadruped_nl.cpp  quadruped_step.cpp  quadruped_step_time.cpp  quadruped_time.cpp
