<?xml version="1.0"?>
<package format="3">
  <name>example-adder</name>
  <version>1.0.0</version>
  <description>Quadruped Walkgen</description>
  <author>Thomas Corbères</author>
  <author>Pierre-Alexandr Léziart</author>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <license>BSD</license>

  <url type="website">https://github.com/loco-3d/quadruped-walkgen</url>

  <build_depend>git</build_depend>
  <build_depend>doxygen</build_depend>
  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>
  <depend>boost</depend>
  <depend>crocoddyl</depend>
  <depend>example-robot-data</depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
