SET(${PROJECT_NAME}_PYTHON_BINDINGS_HEADERS
  ${PYTHON_DIR}/core.hpp
  ${PYTHON_DIR}/action-base.hpp
  ${PYTHON_DIR}/fwd.hpp
  ${PYTHON_DIR}/vector-converter.hpp
  )

SET(${PROJECT_NAME}_PYTHON_BINDINGS_SOURCES
  ${PYTHON_DIR}/crocoddyl.cpp
  ${PYTHON_DIR}/core.cpp
  ${PYTHON_DIR}/action-base.cpp
  ${PYTHON_DIR}/quadruped.cpp
  ${PYTHON_DIR}/quadruped_nl.cpp
  ${PYTHON_DIR}/quadruped_augmented.cpp
  ${PYTHON_DIR}/quadruped_step.cpp
  ${PYTHON_DIR}/quadruped_augmented_time.cpp
  ${PYTHON_DIR}/quadruped_step_time.cpp
  ${PYTHON_DIR}/quadruped_step_period.cpp
  ${PYTHON_DIR}/quadruped_time.cpp
  )
ADD_LIBRARY(${PYTHON_DIR}_pywrap SHARED
  ${${PROJECT_NAME}_PYTHON_BINDINGS_SOURCES} ${${PROJECT_NAME}_PYTHON_BINDINGS_HEADERS})
SET_TARGET_PROPERTIES(${PYTHON_DIR}_pywrap PROPERTIES
  LIBRARY_OUTPUT_DIRECTORY ${PYTHON_DIR}
  PREFIX ""
  SUFFIX ${PYTHON_EXT_SUFFIX})
TARGET_LINK_LIBRARIES(${PYTHON_DIR}_pywrap PUBLIC ${PROJECT_NAME} eigenpy::eigenpy)
TARGET_LINK_BOOST_PYTHON(${PYTHON_DIR}_pywrap PRIVATE)

TARGET_COMPILE_OPTIONS(${PYTHON_DIR}_pywrap PRIVATE "-Wno-conversion")

SET(${PROJECT_NAME}_PYTHON_BINDINGS_FILES
  __init__.py
  )

FOREACH(python ${${PROJECT_NAME}_PYTHON_BINDINGS_FILES})
  PYTHON_INSTALL_ON_SITE(${PYTHON_DIR} ${python})
ENDFOREACH(python ${${PROJECT_NAME}_PYTHON_BINDINGS_FILES})

INSTALL(TARGETS ${PYTHON_DIR}_pywrap DESTINATION ${PYTHON_SITELIB}/${PYTHON_DIR})
