SET(${PROJECT_NAME}_SOURCES
  quadruped.cpp
  )

ADD_LIBRARY(${PROJECT_NAME} SHARED ${${PROJECT_NAME}_SOURCES})
PKG_CONFIG_USE_DEPENDENCY(${PROJECT_NAME} crocoddyl)
PKG_CONFIG_USE_DEPENDENCY(${PROJECT_NAME} eigen3)
PKG_CONFIG_USE_DEPENDENCY(${PROJECT_NAME} pinocchio)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_SERIALIZATION_LIBRARY} crocoddyl)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib)
