SET(${PROJECT_NAME}_PYTHON_BINDINGS_HEADERS
  core.hpp
  action-base.hpp
  fwd.hpp 
  vector-converter.hpp
  )

SET(${PROJECT_NAME}_PYTHON_BINDINGS_SOURCES
  crocoddyl.cpp
  core.cpp
  action-base.cpp
  quadruped.cpp
  )
ADD_LIBRARY(${PYTHON_DIR}_pywrap SHARED ${${PROJECT_NAME}_PYTHON_BINDINGS_SOURCES})
SET_TARGET_PROPERTIES(${PYTHON_DIR}_pywrap PROPERTIES SUFFIX ${PYTHON_EXT_SUFFIX})

TARGET_LINK_LIBRARIES(${PYTHON_DIR}_pywrap ${PROJECT_NAME} eigenpy::eigenpy)
TARGET_LINK_BOOST_PYTHON(${PYTHON_DIR}_pywrap)

TARGET_COMPILE_OPTIONS(${PYTHON_DIR}_pywrap PRIVATE "-Wno-conversion")

INSTALL(TARGETS ${PYTHON_DIR}_pywrap DESTINATION ${PYTHON_SITELIB}/${PYTHON_DIR})
